# kalisi

./: .dockerignore  .env.example  .gitignore  .workspace-template-version  KALISI_CONTAINER_GUIDE.md  README.md  docker-compose-standalone.yml  docker-compose.yml  dump.rdb  generate-certs.sh  install.sh  run_all_tests.sh  start-prebuilt.sh  start.sh  ttyd-custom-index.html
codebase-analyzer/: Cargo.toml
codebase-analyzer/scripts/: load_codebase_fast.py
services/api-gateway/tests/: Cargo.toml  README.md  lib.rs  mfa_auth_tests.rs  neo4j_integration.rs  test_config.rs
services/api-gateway/tests/integration/: api_integration_tests.rs  auth_flow_tests.rs  main_tests.rs
services/api-gateway/tests/unit/: auth_tests.rs  config_tests.rs  graph_tests.rs  mod.rs  security_headers_tests.rs  self_awareness_tests.rs  state_tests.rs  static_files_tests.rs  template_tests.rs
source/: .env  .env.example  .gitignore  Architecture_Summary.md  Cargo.toml  Makefile  NOTICE  Render v1.md  kode.sh  package-lock.json  package.json  setup-ssl.sh  start.sh  status.sh  stop.sh  test_agent.sh  test_agent_commands.sh  test_files.sh  test_hidden_files.sh  test_tree_agent.rs
source/.githooks/: pre-push
source/agents/project-tree-agent/: .gitignore  Cargo.toml  README.md
source/agents/project-tree-agent/src/: lib.rs
source/codebase-analyzer/: codebase-analysis.json
source/codebase-analyzer/src/: main.rs
source/crates/kalisi-core/: Cargo.toml
source/crates/kalisi-core/src/: auth.rs  error.rs  types.rs
source/data/neo4j/: neo4j_export.json  neo4j_non_codebase_backup.json
source/docs/: hud-design-llm.md  hud-design.md  layout-engine-architecture.md  layout-rendering-path.md  per-node-containment-implementation.md  realtime-neo4j-architecture.md  runtime-containment-engine.md  runtime-migration.md  sessions.md
source/docs/architecture/: cascading-layout-system.md  clone-snapshot-audit.md  runtime-layout-config.md  viewgraph-extensibility-analysis.md
source/frontend/: README.md  angular.json  karma-ci.conf.js  karma-minimal.conf.js  karma.conf.js  package-lock.json  package.json  playwright.config.ts  test-layout.js  tsconfig.json  tsconfig.worker.json
source/frontend/docs/: canvas-extension.md  tree-table-data-contract.md
source/frontend/runtime-samples/: containment-runtime.json
source/frontend/src/: index.html  polyfills.ts  styles.scss
source/frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  landing-shell.component.ts
source/frontend/src/app/auth/: auth-routing.module.ts
source/frontend/src/app/settings/: settings.component.ts
source/frontend/src/assets/: mission_card.md
source/frontend/src/assets/fonts/: MSDF-Generation-Instructions.md  MSDF-Web-Generation.md  MSDF_GENERATION_GUIDE.md  charset.txt  generate-msdf.sh  inter-regular-msdf.json.template
source/frontend/src/assets/images/: jess.avif
source/frontend/src/environments/: environment.prod.ts  environment.ts
source/frontend/test-results/: .last-run.json
source/frontend/test-results/check-no-layout-on-load-ve-01f9c-ter-loading-saved-positions-chromium/: error-context.md
source/frontend/test-results/check-no-layout-on-load-ve-7eda2-preserved-through-save-load-chromium/: error-context.md
source/frontend/test-results/check-save-load-positions--a41eb-om-flattened-node-positions-chromium/: error-context.md
source/frontend/test-results/hud-style-panel-HUD-Style--f2575-on-S-after-selecting-a-node-chromium/: error-context.md
source/frontend/test-results/per-node-save-load-per-nod-3a0d8--persists-through-save-load-chromium/: error-context.md
source/frontend/tests/e2e/: check-force-directed-data.spec.ts  check-no-layout-on-load.spec.ts  check-save-load-positions.spec.ts  debug-duplicate-children.spec.ts  debug-runtime-merge-flat.spec.ts  debug-save-load-positions.spec.ts  full-save-load-test.spec.ts  hud-style-panel.spec.ts  isolate-node-1-from-node-2-collapse.spec.ts  layout-panel-initial-state.spec.ts  layout-panel-toggle.spec.ts  open-browser.spec.ts  per-node-containment-collapse-expand.spec.ts  per-node-containment.spec.ts  per-node-save-load.spec.ts  realtime-delta-update.spec.ts  runtime-merge-view.spec.ts  runtime-style-overlay.spec.ts  save-load-viewgraph.spec.ts  test-save-positions.spec.ts  verify-save-load.spec.ts
source/neo4rs-glen-custom/lib/src/: row.rs
source/neo4rs-glen-custom/lib/src/messages/: bye.rs
source/neo4rs-glen-custom/lib/src/types/: string.rs
source/scripts/: debug-normalizer.js  export_neo4j.py  start-prebuilt.sh  test_tree_agent.sh
source/scripts/neo4j/: README.md  add_timestamp_support.cypher  import_code_model.cypher
source/services/agent-runtime/: Cargo.toml
source/services/agent-runtime/src/: agent.rs  bus.rs  chat_agent.rs  envelope.rs  lib.rs  log_analysis_agent.rs  log_display_agent.rs  main.rs  mrap.rs  project_tree_agent.rs  security_agent.rs  shared_logger.rs
source/services/agent-runtime/tests/: agent_runtime_tests.rs
source/services/api-gateway/: Cargo.toml  deny.toml
source/services/api-gateway/scripts/: generate_csp_hashes.sh
source/services/api-gateway/src/: config.rs  crypto.rs  csp_angular_fix.rs  csp_nonce_styles.rs  csp_nonce_styles_simple.rs  csp_styles.rs  email.rs  graph_fixed.rs  lib.rs  logging.rs  main.rs  mfa_simple.rs  routes.rs  secure_config.rs  security_logging.rs  security_metrics.rs  state.rs  static_files.rs  test_helpers.rs  user_storage.rs  vault.rs  websocket.rs
source/services/api-gateway/src/database/: mod.rs  neo4j_gateway.rs  (+1 more)
source/services/api-gateway/tests/: integration_tests.md  lib.rs  mfa_auth_tests.rs  neo4j_integration.rs  redis_message_bus_tests.rs  security_tests.rs  test_config.rs  test_utils.rs
source/services/neo4j-ui/: Cargo.toml
source/services/neo4j-ui/src/: main.rs
source/spikes/code-model-builder/: Cargo.toml  DESIGN.md  EDGE_EXTRACTION_DESIGN.md  NEO4J_CLEANUP.md  README.md
source/spikes/code-model-builder/output/: edges.jsonl
source/spikes/code-model-builder/src/: flatten.rs  lib.rs
source/static/: mfa-reset.html
(+385 files in other folders)
