[package]
name = "edt-gateway-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run_mfa_tests"
path = "bin/run_mfa_tests.rs"

[dependencies]
# Main application dependency
edt-gateway = { path = ".." }

# Test framework
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# HTTP client and server testing
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and Redis
redis = "0.25"

# Authentication and security
jsonwebtoken = "9.0"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }

# Utilities
regex = "1.0"
rand = "0.8"
futures = "0.3"
urlencoding = "2.1"

# Test utilities
assert_matches = "1.5"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# Logging for tests
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"

[dev-dependencies]
# Additional test utilities
mockall = "0.11"
wiremock = "0.5"
testcontainers = "0.15"