[package]
name = "project-tree-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }
redis = { workspace = true, features = ["aio", "tokio-comp", "streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[lib]
name = "project_tree_agent"
path = "src/lib.rs"

[[bin]]
name = "tree-agent-cli"
path = "src/bin/tree_agent_cli.rs"
