[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }
redis = { workspace = true, features = ["aio", "tokio-comp", "streams"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bytes = "1.8"
dotenv = "0.15"

[[bin]]
name = "agent-runtime-service"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
