[package]
name = "kalisi-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
kalisi-core = { path = "../../crates/kalisi-core", features = ["redis-integration"] }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
redis = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Utils  
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
rand = "0.8"

# Security
aes-gcm = "0.10"
ring = "0.17"
governor = "0.6"
regex = "1.10"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-trait = "0.1"

# MFA
totp-lite = "2.0"
base32 = "0.5"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
constant_time_eq = "0.3"

# Additional security
sha2 = "0.10"
once_cell = "1.19"
hmac = "0.12"
hkdf = "0.12"
urlencoding = "2.1"
ammonia = "4.0"
dashmap = "6.0"
parking_lot = "0.12"

# Secrets Management (optional)
vaultrs = { version = "0.7", optional = true }
aws-sdk-secretsmanager = { version = "1.26", optional = true }
aws-config = { version = "1.5", optional = true }

# Additional  
# CUSTOM NEO4RS FORK - DO NOT REVERT TO UPSTREAM
# This is a modified version of neo4rs with schema-agnostic data extraction
# DO NOT change this to use crates.io version - it will break data extraction
neo4rs = { path = "../../neo4rs-glen-custom/lib", features = ["json"] }
include_dir = { workspace = true }
base64 = "0.22"
http-body-util = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3"
futures = "0.3"
rmp-serde = "1.1"
mime_guess = "2.0"

# HTTP client for proxy
hyper = { version = "1.0", features = ["full"] }
hyper-tls = "0.6"
axum-extra = { version = "0.9", features = ["cookie"] }

# TLS support
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.0"

# Template engine
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

[dev-dependencies]
# Testing
actix-web = { version = "4", features = ["macros"] }
actix-rt = "2"
actix-cors = "0.7"
awc = "3"
futures = "0.3"
serial_test = "3.0"
pretty_assertions = "1.4"
test-context = "0.3"
mockall = "0.12"
wiremock = "0.6"

[[test]]
name = "integration"
path = "tests/lib.rs"
