[package]
name = "code-model-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
anyhow = "1.0"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
sha2 = "0.10"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "code_model_builder"
path = "src/lib.rs"

[[bin]]
name = "build-model"
path = "src/bin/build_model.rs"
